# MisleadLM

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  requirements.txt  script_micah.sh  setup.cfg
OLD_examples/programming/configs/: ds_config_bf16.json  ppo_config.yml
OLD_examples/qa/: finetune.sh  train.py  train_custom.sh
OLD_examples/qa/configs/: default_accelerate_config_custom.yaml
OLD_examples/qa/data/: create_summaries.py
examples/programming/: reward_api.py
examples/programming/data/: train.json  val.json
examples/programming/utils/: executor.py
examples/qa/: create_scorings_huggingface.sh  eval.py  eval.sh  load_test.py  reward_api.py  train.py  train.sh
examples/qa/configs/: default_accelerate_config.yaml  ds_config_bf16.json  ppo_config_custom.yml
examples/qa/data/: create_summaries.py  data_tests.py  evaluate_dataset_quality.py  openai_batch_utils.py  train.json  val.json
examples/qa/reward/: plot_progress.py  reward_model.py  train.py  train_judge.sh  train_preference.py  train_preference.sh
experiments/programming/: train.py  train.sh
experiments/programming/configs/: ppo_config.yml
experiments/qa/: agent_eval.py  agent_finetune.py  agent_train.py  finetune.py  judge_api.py  plot_training_results.py  qa_dataset.py  reward_api.py  reward_model_general_server.py  reward_model_general_server_experimental.py  reward_model_general_train.py  reward_model_general_train_experimental.py  reward_model_qa_server.py  reward_model_qa_train.py  train_reward_model_general.py  utils.py
experiments/qa/configs/: default_accelerate_config.yaml  default_accelerate_config_eval.yaml  ds_config_bf16.json  ppo_config.yml  (+9 more)
trlx/: trlx.py
trlx/data/: configs.py  ppo_types.py
trlx/orchestrator/: ppo_orchestrator.py
trlx/pipeline/: __init__.py  offline_pipeline.py  ppo_pipeline.py
trlx/trainer/: accelerate_base_trainer.py  accelerate_ppo_trainer.py
trlx/utils/: __init__.py  modeling.py
(+63 files in other folders)
