[metadata]
name = trlx
author = Alex Havrilla
version = 0.3.0
url = https://github.com/CarperAI/trlx
description = A repo for distributed training of language models with Reinforcement Learning via Human Feedback (RLHF)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
install_requires =
    accelerate==1.1.1
    bitsandbytes==0.45.0
    datasets==3.1.0
    deepspeed==0.16.1
    einops==0.8.0
    fast_bleu==0.0.90
    Flask==3.1.0
    flask_cors==5.0.0
    ijson==3.3.0
    multiprocess==0.70.16
    nltk==3.9.1
    numpy==2.2.0
    omegaconf==2.3.0
    openai==1.57.2
    pandas==2.2.3
    pebble==5.1.0
    peft==0.14.0
    python-dotenv==1.0.1
    pytorch_lightning==2.4.0
    PyYAML==6.0.2
    PyYAML==6.0.2
    ray==2.39.0
    Requests==2.32.3
    rich==13.9.4
    safetensors==0.4.5
    setuptools==75.1.0
    torch==2.5.1
    torchtyping==0.1.5
    tqdm==4.67.1
    transformers==4.47.0
    trl==0.13.0
    wandb==0.19.1
    flash-attn==2.7.2.post1

[options.extras_require]
bnb = bitsandbytes
dev =
    black
    isort
    flake8
    pre-commit
    pytest
    pytest-cov

[options.packages.find]
exclude =
    docs*
    tests*

[flake8]
max-complexity = 10
max-line-length = 127
# flake8 error codes: https://flake8.pycqa.org/en/latest/user/error-codes.html
# pycodestyle codes: https://pycodestyle.pycqa.org/en/latest/intro.html#error-codes
# E203 # whitespace before ‘,’, ‘;’, or ‘:’
# E741 # do not use variables named ‘l’, ‘O’, or ‘I’
# F401 # module imported but unused
# F821 # undefined name name
# W503 # line break before binary operator
# W605 # invalid escape sequence ‘x’
ignore =
    E203
    E741
    F821
    W503
    W605
per-file-ignores = __init__.py:F401,loading.py:F401
exclude =
    .git
    __pycache__
    docs/source/conf.py
    build
    dist
